# AdventOfCode2020

./: .gitignore  .travis.yml  Cargo.toml  README.md  run_build.sh
.github/badges/: completion.json
.github/workflows/: build.yml  coverage.yml
day1/: Cargo.toml
day1/src/: input_parser.rs  main.rs
day10/: Cargo.toml
day10/src/: main.rs
day11/: Cargo.toml
day11/src/: main.rs
day12/: Cargo.toml
day12/src/: main.rs
day13/: Cargo.toml
day13/src/: main.rs
day14/: Cargo.toml
day14/src/: main.rs
day15/: Cargo.toml
day15/src/: main.rs
day16/: Cargo.toml
day16/src/: main.rs
day17/: Cargo.toml
day17/src/: lib.rs  main.rs
day18/: Cargo.toml
day18/src/: main.rs
day19/: Cargo.toml
day19/src/: main.rs
day2/: Cargo.toml
day2/src/: main.rs
day20/: Cargo.toml
day20/src/: main.rs
day21/: Cargo.toml
day21/src/: main.rs
day22/: Cargo.toml
day22/src/: main.rs
day23/: Cargo.toml
day23/src/: main.rs
day24/: Cargo.toml
day24/src/: main.rs
day25/: Cargo.toml
day25/src/: main.rs
day3/: Cargo.toml
day3/src/: main.rs
day4/: Cargo.toml
day4/src/: main.rs
day4/src/passport/: eye_color.rs  hair_color.rs  height.rs  mod.rs  passport_id.rs
day5/: Cargo.toml
day5/src/: main.rs
day6/: Cargo.toml
day6/src/: main.rs
day7/: Cargo.toml
day7/src/: main.rs
day8/: Cargo.toml
day8/src/: main.rs
day9/: Cargo.toml
day9/src/: main.rs
utils/: Cargo.toml
utils/src/: input_read.rs  lib.rs
